--MULTISITE-1298 Improve links view

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -124,6 +124,7 @@
 @import "feature-splash.less"; // feature splash screen
 @import "feature-wiki.less"; // feature wiki
 @import "feature-blog.less"; // feature blog
+@import "feature-links.less"; // feature links
 
 @import "responsive.less"; // specific rules for small devices
 @import "hack-bootstrap.less"; // hack bootstrap styles
