--- a/sites/all/themes/ec_resp/css/less/responsive.less
+++ b/sites/all/themes/ec_resp/css/less/responsive.less
@@ -58,6 +58,10 @@
   }
 }
 
+@media (max-width: 479px) {
+
+}
+
 @media (max-width: @navbarCollapseWidth) {
   body {
     padding-top: 55px !important;
