--MULTISITE-1304 Improve newsletter view

--- a/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
+++ b/sites/all/themes/ec_resp/css/less/hack-bootstrap.less
@@ -128,6 +128,20 @@ h5 {
     &:focus { color: #def !important; }
   }  
 }
+.btn-inverse { 
+  color: #fff !important;
+  text-decoration: none;
+  &:hover { color: #ddd !important; }
+  &:active { color: #ddd !important; }
+  &:focus { color: #ddd !important; }
+  a {
+    color: #fff !important;
+    text-decoration: none;
+    &:hover { color: #ddd !important; }
+    &:active { color: #ddd !important; }
+    &:focus { color: #ddd !important; }
+  }  
+}
 
 /* ---------------- Carousel  ----------------- */
 .carousel {
