--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -125,6 +125,7 @@
 @import "feature-wiki.less"; // feature wiki
 @import "feature-blog.less"; // feature blog
 @import "feature-links.less"; // feature links
+@import "feature-e-library.less"; // feature e-library
 
 @import "responsive.less"; // specific rules for small devices
 @import "hack-bootstrap.less"; // hack bootstrap styles
