--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
@@ -20,91 +20,102 @@
 }
 
 /* Use the following CSS code if you want to have a class per icon */
-[class^="multisite-icon-"]:before, [class*=" multisite-icon-"]:before {
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="multisite-icon-"]:before {
+*/
+.multisite-icon-group:before, .multisite-icon-edit:before, .multisite-icon-book:before, .multisite-icon-calendar:before, .multisite-icon-newspaper:before, .multisite-icon-file:before, .multisite-icon-check:before, .multisite-icon-earth:before, .multisite-icon-link:before, .multisite-icon-question:before, .multisite-icon-feed:before, .multisite-icon-megaphone:before, .multisite-icon-paperplane:before, .multisite-icon-archive:before, .multisite-icon-pictures:before, .multisite-icon-language:before, .multisite-icon-publish:before, .multisite-icon-code:before, .multisite-icon-directions:before, .multisite-icon-mail:before, .multisite-icon-light-bulb:before, .multisite-icon-share:before, .multisite-icon-thumbs-up:before, .multisite-icon-vcard:before, .multisite-icon-flow-branch:before, .multisite-icon-comments-alt:before, .multisite-icon-cogs:before, .multisite-icon-home:before, .multisite-icon-reorder:before {
 	font-family: 'multisite-icons';
-	font-style: normal;
 	speak: none;
+	font-style: normal;
 	font-weight: normal;
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
-.multisite-icon-comments-alt:before {
-	content: "\f0e6";
-}
-.multisite-icon-flow-branch:before {
-	content: "\e016";
-}
-.multisite-icon-vcard:before {
-	content: "\e015";
-}
-.multisite-icon-thumbs-up:before {
-	content: "\e013";
-}
-.multisite-icon-share:before {
-	content: "\e012";
-}
-.multisite-icon-light-bulb:before {
-	content: "\e011";
-}
-.multisite-icon-mail:before {
-	content: "\e010";
-}
-.multisite-icon-directions:before {
-	content: "\e00f";
-}
-.multisite-icon-code:before {
-	content: "\e00e";
-}
-.multisite-icon-publish:before {
-	content: "\e00c";
-}
-.multisite-icon-language:before {
-	content: "\e00b";
-}
-.multisite-icon-pictures:before {
-	content: "\e00a";
-}
-.multisite-icon-archive:before {
-	content: "\e009";
-}
-.multisite-icon-paperplane:before {
-	content: "\e008";
-}
-.multisite-icon-megaphone:before {
-	content: "\e007";
-}
-.multisite-icon-feed:before {
-	content: "\e006";
-}
-.multisite-icon-question:before {
-	content: "\e005";
-}
-.multisite-icon-link:before {
-	content: "\e001";
-}
-.multisite-icon-earth:before {
-	content: "\e004";
-}
-.multisite-icon-check:before {
-	content: "\f046";
-}
-.multisite-icon-file:before {
-	content: "\f016";
-}
-.multisite-icon-newspaper:before {
-	content: "\e017";
-}
-.multisite-icon-calendar:before {
-	content: "\f073";
-}
-.multisite-icon-book:before {
-	content: "\f02d";
+.multisite-icon-group:before {
+	content: "\f0c0";
 }
 .multisite-icon-edit:before {
 	content: "\f044";
 }
-.multisite-icon-group:before {
-	content: "\f0c0";
+.multisite-icon-book:before {
+	content: "\f02d";
+}
+.multisite-icon-calendar:before {
+	content: "\f073";
+}
+.multisite-icon-newspaper:before {
+	content: "\e017";
+}
+.multisite-icon-file:before {
+	content: "\f016";
+}
+.multisite-icon-check:before {
+	content: "\f046";
+}
+.multisite-icon-earth:before {
+	content: "\e004";
+}
+.multisite-icon-link:before {
+	content: "\e001";
+}
+.multisite-icon-question:before {
+	content: "\e005";
+}
+.multisite-icon-feed:before {
+	content: "\e006";
+}
+.multisite-icon-megaphone:before {
+	content: "\e007";
+}
+.multisite-icon-paperplane:before {
+	content: "\e008";
+}
+.multisite-icon-archive:before {
+	content: "\e009";
+}
+.multisite-icon-pictures:before {
+	content: "\e00a";
+}
+.multisite-icon-language:before {
+	content: "\e00b";
+}
+.multisite-icon-publish:before {
+	content: "\e00c";
+}
+.multisite-icon-code:before {
+	content: "\e00e";
+}
+.multisite-icon-directions:before {
+	content: "\e00f";
+}
+.multisite-icon-mail:before {
+	content: "\e010";
+}
+.multisite-icon-light-bulb:before {
+	content: "\e011";
+}
+.multisite-icon-share:before {
+	content: "\e012";
+}
+.multisite-icon-thumbs-up:before {
+	content: "\e013";
+}
+.multisite-icon-vcard:before {
+	content: "\e015";
+}
+.multisite-icon-flow-branch:before {
+	content: "\e016";
+}
+.multisite-icon-comments-alt:before {
+	content: "\f0e6";
+}
+.multisite-icon-cogs:before {
+	content: "\e000";
+}
+.multisite-icon-home:before {
+	content: "\e002";
 }
 .multisite-icon-reorder:before {
 	content: "\f0c9";
