MULTISITE-1440 Update font used in Europa header

--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -44,10 +44,11 @@
   line-height:1.4;
   /* ------------------ title and sub-title ------------------ */
   #main-title {
-    font-family: ec_font;
+    /*font-family: ec_font;*/
     color: #0065a2;
     text-transform: uppercase;
-    font-size: 28px !important;
+    /*font-size: 28px !important;*/
+    font-size: 24px !important;
     position: absolute;
     z-index: 10;
     left: 245px;
@@ -55,9 +56,10 @@
     text-decoration: none;
   }
   #sub-title {
-    font-family: ec_font;
+    /*font-family: ec_font;*/
     color: #fff;
-    font-size: 21px !important;
+    /*font-size: 21px !important;*/
+    font-size: 17px !important;
     position: absolute;
     z-index: 10;
     left: 245px;
