--- a/sites/all/themes/ec_resp/css/less/feature-media-galleries.less
+++ b/sites/all/themes/ec_resp/css/less/feature-media-galleries.less
@@ -53,8 +53,10 @@
             border: none;
             .border-radius(0);
             padding: 0;
-            top: 77px;
-            left: 76px;
+            top: 50%;
+            left: 50%;
+            margin-left: -17px;
+            margin-top: -17px;
           }
         }
       }
