--- a/sites/all/themes/ec_resp/css/less/feature-events.less
+++ b/sites/all/themes/ec_resp/css/less/feature-events.less
@@ -93,3 +93,8 @@
 .header-body-divider .grippie {
   background-image: none;
 }
+
+.fc-content {
+  .box-shadow(4px 6px 6px -6px @grayDark);
+  .border-radius(3px);   
+}
