--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -17,7 +17,7 @@
   line-height: 1.7;
   padding: 1px 10px 2px 10px;
   text-decoration: none;
-  .border-radius(0 0 10px 10px);
+  /*.border-radius(0 0 10px 10px);*/
 }
 #skip-link a:hover,
 #skip-link a:active,
