--- a/sites/all/themes/ec_resp/css/less/feature-faq.less
+++ b/sites/all/themes/ec_resp/css/less/feature-faq.less
@@ -1,4 +1,12 @@
 /* ---------------- faq  ----------------- */
 .view-faq ol.nav {
   list-style: decimal;
+  li {
+  	a {
+  		background-color: #fff;
+  	}
+  	blockquote {
+  		border-color: #fff;
+  	}
+  }
 }
