--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -66,7 +66,7 @@ a.btn {
   height: 36px;
   border: 1px solid #e5e5e5;
   .border-radius(5px);
-  #gradient .vertical(#f5f5f5, #eeeeee);
+  #gradient .vertical(@grayLight, darken(@grayLight,10%));
 }
 .subnav .nav {
   margin-bottom: 0;
@@ -77,16 +77,17 @@ a.btn {
   margin: 0;
   padding-top:    11px;
   padding-bottom: 11px;
-  border-left: 1px solid #f5f5f5;
-  border-right: 1px solid #e5e5e5;
+  border-left: 1px solid lighten(@grayLight,10%);
+  border-right: 1px solid @gray;
   text-decoration: none;
   .border-radius(0);
+  color: @textColor;
 }
 .subnav .nav > .active > a,
 .subnav .nav > .active > a:hover {
   padding-left: 13px;
   color: #777;
-  background-color: #e9e9e9;
+  background-color: lighten(@grayLight,10%);
   border-right-color: #ddd;
   border-left: 0;
   .box-shadow(inset 0 3px 5px rgba(0,0,0,.05));
@@ -122,6 +123,19 @@ ul.nav {
 }
 ul.nav-tabs {
   margin-top: 12px !important;
+  border-bottom-color: @grayLight;
+  li a {
+    background-color: @white;
+    border-top: 1px solid @grayLight;
+    border-right: 1px solid @grayLight;
+    border-bottom: 1px solid @grayLighter;
+    border-left: 1px solid @grayLight;
+    &:hover {
+      border-top-color: @gray;
+      border-right-color: @gray;
+      border-left-color: @gray;
+    }
+  }
 }
 ul.action-links {
   list-style: none;
