--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -3,11 +3,30 @@
 #search-block-form {
   padding-bottom: 5px;
   text-align: left;
+  height: 22px;
   .content {
     margin-top: 0;
   }
   .form-actions {
     padding: 0;
+  }
+  .form-item,
+  .form-actions {
+    display: inline-block;
+    vertical-align: top;
+    input {
+      height: 20px;
+      font-size: 14px;
+      line-height: 16px;
+      width: auto;
+    }
+    label {
+      display: none;
+      padding: 0;
+      margin: 0;
+      line-height: 0px;
+      font-size: 0px;
+    }
   }
 }
 
