MULTISITE-1610 Theme block content slider

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -117,6 +117,7 @@
 @import "feature-blog.less"; // feature blog
 @import "feature-links.less"; // feature links
 @import "feature-e-library.less"; // feature e-library
+@import "feature-content-slider.less"; // feature content slider
 
 @import "responsive.less"; // specific rules for small devices
 @import "hack-bootstrap.less"; // hack bootstrap styles
