--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -31,6 +31,11 @@
   src: local(ec_font), url('../fonts/ECSquareSansPro-Regular.ttf') format('opentype');
 }
 
+#banner-flag-small {
+  float: left;
+  height: 40px;
+}
+  
 #layout-header {
   height:145px;
   width:100%;
