--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/style.css
@@ -15,6 +15,8 @@
 	content: attr(data-icon);
 	speak: none;
 	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
@@ -23,13 +25,15 @@
 /*
 Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
-[class*="multisite-icon-"]:before {
+[class*="multisite-icon-"] {
 */
-.multisite-icon-flag:before, .multisite-icon-reorder:before, .multisite-icon-home:before, .multisite-icon-cogs:before, .multisite-icon-comments-alt:before, .multisite-icon-flow-branch:before, .multisite-icon-vcard:before, .multisite-icon-thumbs-up:before, .multisite-icon-share:before, .multisite-icon-light-bulb:before, .multisite-icon-mail:before, .multisite-icon-directions:before, .multisite-icon-code:before, .multisite-icon-publish:before, .multisite-icon-language:before, .multisite-icon-pictures:before, .multisite-icon-archive:before, .multisite-icon-paperplane:before, .multisite-icon-megaphone:before, .multisite-icon-feed:before, .multisite-icon-question:before, .multisite-icon-link:before, .multisite-icon-earth:before, .multisite-icon-check:before, .multisite-icon-file:before, .multisite-icon-newspaper:before, .multisite-icon-calendar:before, .multisite-icon-book:before, .multisite-icon-edit:before, .multisite-icon-group:before, .multisite-icon-camera:before {
+.multisite-icon-flag, .multisite-icon-reorder, .multisite-icon-home, .multisite-icon-cogs, .multisite-icon-comments-alt, .multisite-icon-flow-branch, .multisite-icon-vcard, .multisite-icon-thumbs-up, .multisite-icon-share, .multisite-icon-light-bulb, .multisite-icon-mail, .multisite-icon-directions, .multisite-icon-code, .multisite-icon-publish, .multisite-icon-language, .multisite-icon-pictures, .multisite-icon-archive, .multisite-icon-paperplane, .multisite-icon-megaphone, .multisite-icon-feed, .multisite-icon-question, .multisite-icon-link, .multisite-icon-earth, .multisite-icon-check, .multisite-icon-file, .multisite-icon-newspaper, .multisite-icon-calendar, .multisite-icon-book, .multisite-icon-edit, .multisite-icon-group, .multisite-icon-camera, .multisite-icon-location, .multisite-icon-menu, .multisite-icon-pie, .multisite-icon-list, .multisite-icon-bookmarks, .multisite-icon-notification {
 	font-family: 'multisite-icons';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
@@ -125,4 +129,22 @@ you can use the generic selector below, but it's slower:
 }
 .multisite-icon-camera:before {
 	content: "\e003";
+}
+.multisite-icon-location:before {
+	content: "\e018";
+}
+.multisite-icon-menu:before {
+	content: "\e014";
+}
+.multisite-icon-pie:before {
+	content: "\e019";
+}
+.multisite-icon-list:before {
+	content: "\e01a";
+}
+.multisite-icon-bookmarks:before {
+	content: "\e01b";
+}
+.multisite-icon-notification:before {
+	content: "\e01c";
 }
