--- a/sites/all/libraries/jstree/themes/ec-default/style.css
+++ b/sites/all/libraries/jstree/themes/ec-default/style.css
@@ -4,10 +4,10 @@
  * Supported plugins: ui (hovered, clicked), checkbox, contextmenu, search
  */
 
-.jstree-ec-default a { display: block; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; }
-.jstree-ec-default a:hover { background-color: #007fcf; color: #fff; border-radius: 5px;}
+.jstree-ec-default a { display: block; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; color: #fff;}
+.jstree-ec-default a:hover { background-color: #074581; color: #fff; border-radius: 5px;}
 .jstree-ec-default a.active,
-.jstree-ec-default a.active:hover {background-color: #00609C; color: #fff; border-radius: 5px;}
+.jstree-ec-default a.active:hover {background-color: #043F72; color: #fff; border-radius: 5px;}
 .jstree-ec-default li, 
 .jstree-ec-default ins { background-image:url("d.png"); background-repeat:no-repeat; background-color:transparent; }
 .jstree-ec-default ins { width: 16px; height: 16px; }
