MULTISITE-1773 Fix duplicated region name and theme path

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -358,6 +358,15 @@ fieldset,
   margin: 0;
 }
 
+.region-sidebar-left input, 
+.region-sidebar-left textarea, 
+.region-sidebar-left .uneditable-input,
+.region-sidebar-right input, 
+.region-sidebar-right textarea, 
+.region-sidebar-right .uneditable-input {
+  width: auto;
+}
+
 /* Contact Form */
 .contact-form #edit-name {
   width: 75%;
