--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -6,7 +6,7 @@
     font-size: 110%;
     &.brand {
       font-size: 150%;
-      text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2), 1px 1px 0 #FFFFFF;
+      text-shadow: none;
     }    
   }
   li {
