MULTISITE-1791 Enhance header display

--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -132,6 +132,11 @@
   }
 }
 
+/* ------------------ Region header right ------------------ */
+.region-header-right {
+  float: right;
+}
+
 /* ------------------ Breadcrumb ------------------ */
 #path {
   font-size:90%;
