--- a/sites/all/themes/ec_resp/css/less/user.less
+++ b/sites/all/themes/ec_resp/css/less/user.less
@@ -21,8 +21,12 @@
 .username {
   padding: 0 0.5em;
 }
-#block-system-user-menu li a {
-  font-size: 0.9em;
+#block-system-user-menu li {
+  padding-left: 10px;
+  padding-right: 0;
+  a {
+    font-size: 0.9em;
+  }
 }
 
 /* -------------- Password Meter  ------------- */
