MULTISITE-1822 Improve responsive design

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -36,6 +36,9 @@
     }
   }  
 }
+#block-system-main-menu-mobile a.brand {
+  font-size: 120%;
+}
 
 /* --------------- Secondary Menu ------------ */
 
