--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -200,6 +200,9 @@ ul {
 
 /* ----------------- Content ------------------ */
 
+#content-title {
+  display: none;
+}
 .layout-content .content {
   margin-top: 10px;
   clear: both;
