MULTISITE-1907 Fix display of social bookmark

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -119,6 +119,7 @@
 @import "feature-e-library.less"; // feature e-library
 @import "feature-content-slider.less"; // feature content slider
 @import "feature-notifications.less"; // feature notifications
+@import "feature-social-bookmark.less"; // feature notifications
 
 @import "responsive.less"; // specific rules for small devices
 @import "hack-bootstrap.less"; // hack bootstrap styles
