--- a/sites/all/themes/ec_resp/css/less/header.less
+++ b/sites/all/themes/ec_resp/css/less/header.less
@@ -32,15 +32,18 @@
 }
 
 #main-menu-mobile {
+  position: absolute !important;
   border-top: none;
   .navbar-inner {
     padding: 0;
     background-image: none;
-    background-color: #fff;
+    background-color: transparent;
     filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);
   }
   #block-system-main-menu-mobile {
     padding-top: 10px;
+    background-color: #fff;
+    width: 100%;
     a.brand {
       font-size: 26px;
       padding-top: 27px;
@@ -53,6 +56,10 @@
     }
     .nav-collapse {
       background-color: #0065A2;
+      &.affix {
+        width: 100%;
+        top: 40px;
+      }
     }
   }
   #block-system-accessibility-menu-mobile {
@@ -62,9 +69,13 @@
       padding-bottom: 10px;
       margin-bottom: 5px;
     }
-
     #sidebar-button {
       float: left;
+    }
+    &.affix {
+      position: fixed !important;
+      top: 0;
+      width: 100%;
     }    
   }
 }
